Added some writing files examples.